Add Cache implementation with several approaches